refactoring, add preload default

--- a/src/main/resources/org/cypher6672/css/scene0.css
+++ b/src/main/resources/org/cypher6672/css/scene0.css
@@ -19,3 +19,9 @@
     -fx-font-family: "Mandatory Plaything";
     -fx-padding: 10px;
 }
+
+#teamBold {
+    -fx-font-weight: bold;
+    -fx-font-family: "Mandatory Plaything";
+    -fx-font-size: 24px;
+}
