update team list, move trap to endgame

--- a/src/main/resources/org/cypher6672/scenes/scene3.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene3.fxml
@@ -34,15 +34,13 @@
    <PlusMinusBox fx:id="sourcePickups" layoutX="684.0" layoutY="131.0" />
    <PlusMinusBox fx:id="oppPickups" layoutX="684.0" layoutY="209.0" />
    <Line endX="819.6000366210938" layoutX="122.0" layoutY="282.0" startX="-100.0" />
-   <Label layoutX="148.0" layoutY="473.0" text="Amp" />
-   <Label layoutY="307.0" prefHeight="96.0" prefWidth="118.0" text="Spk Close" textAlignment="CENTER" wrapText="true" />
+   <Label layoutX="312.0" layoutY="491.0" text="Amp" />
+   <Label layoutX="3.0" layoutY="307.0" prefHeight="96.0" prefWidth="118.0" text="Spk Close" textAlignment="CENTER" wrapText="true" />
    <Label layoutX="310.0" layoutY="316.0" prefHeight="79.0" prefWidth="72.0" text="Spk Mid" textAlignment="CENTER" wrapText="true" />
    <Label layoutX="602.0" layoutY="316.0" prefHeight="79.0" prefWidth="72.0" text="Spk Far" textAlignment="CENTER" wrapText="true" />
-   <Label layoutX="403.0" layoutY="470.0" text="Trap" />
-   <Tally fx:id="teleopAmp" layoutX="228.0" layoutY="427.0" />
+   <Tally fx:id="teleopAmp" layoutX="393.0" layoutY="445.0" />
    <Tally fx:id="teleopSpeakerClose" layoutX="130.0" layoutY="299.0" />
-   <Tally fx:id="teleopSpeakerMid" layoutX="395.0" layoutY="299.0" />
-   <Tally fx:id="teleopTrap" layoutX="508.0" layoutY="424.0" />
+   <Tally fx:id="teleopSpeakerMid" layoutX="397.0" layoutY="300.0" />
    <Tally fx:id="teleopSpeakerFar" layoutX="684.0" layoutY="299.0" />
    <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="23.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
       <viewport>
